feat: add healthiness & readiness routes
