# openapi.yaml
@@ -68,6 +68,28 @@ paths:
             "application/json":
               schema:
                 $ref: "#/components/schemas/todo"
+  /ready:
+    get:
+      summary: Get the readiness of the service
+      operationId: isReady
+      tags:
+        - healthcheck
+      responses:
+        "200":
+          description: Service is ready
+        "503":
+          description: Service isn't ready yet
+  /healthy:
+    get:
+      summary: Get the healthiness of the service
+      operationId: isReady
+      tags:
+        - healthcheck
+      responses:
+        "200":
+          description: Service is healthy
+        "503":
+          description: Service isn't healthy
 components:
   schemas:
     todo:
